@@ -1,5 +1,6 @@
 v0.04 2008.12.13
-   add FontPickerCtrl and ColourPickerCtrl  (HJANSEN)
+   Add FontPickerCtrl and ColourPickerCtrl  (HJANSEN)
+   Switching to use Module::Install (SZABGAB)
 
 v0.03 2008.11.23
     Add support to wxTextCtrl, add wxStaticLine (KAARE)
